--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project(MyCppProject VERSION 1.0)
 set(CMAKE_CXX_STANDARD 17)
 enable_testing()
 
+file(GLOB SOURCES ${CMAKE_SOURCE_DIR}/src/*.cpp)
+
 # Library target
-add_library(project_lib
-        src/InsertURL.cpp
-)
+add_library(project_lib ${SOURCES})
 target_include_directories(project_lib PUBLIC
         ${CMAKE_SOURCE_DIR}/include
 )
