--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     command: ./main_app
     ports:
       - "12345:12345"
+    volumes:
+      - ./url_server/data:/workspace/build/../data
   
   url_client:
     build:
