--- a/web_server/package.json
+++ b/web_server/package.json
@@ -2,7 +2,7 @@
   "name": "web_server",
   "version": "1.0.0",
   "description": "web server for mails",
-  "homepage": "https://github.com/Mro2903/ASP_Project#readme",
+  "homepage": "https://github.com/Mro2903/ASP_Project#me",
   "bugs": {
     "url": "https://github.com/Mro2903/ASP_Project/issues"
   },
