feat: initialize web application with React and basic structure
- Added package.json with dependencies for React, Bootstrap, and testing libraries.
- Created public assets including favicon, logos, and manifest for PWA support.
- Set up index.html for the React application.
- Implemented main App component with routing using react-router-dom.
- Developed authentication context for user login and token management.
- Created layout and navigation components for the application.
- Added sidebar and mail components for displaying and managing emails.
- Implemented theme context for dark/light mode support.
- Styled components with CSS variables for theming and layout.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,3 +35,14 @@ services:
       - "3000:3000"
     depends_on:
       - url_server
+
+web_app:
+  build:
+    context: ./web_app
+    dockerfile: Dockerfile
+  working_dir: /app
+  command: npm start
+  ports:
+    - "80:80"
+  depends_on:
+    - web_server
