Refactor user photo handling: remove image upload component, integrate multer for photo uploads, and update user model to handle base64 images.

--- a/web_server/package.json
+++ b/web_server/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "express": "^5.1.0",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.1"
   }
 }
