--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 COPY package*.json .
 RUN npm install
 COPY . .
-
+RUN npm install -g serve
 RUN npm run build
 EXPOSE 8080
-CMD ["npm", "start"]
+CMD ["serve", "-s", "build", "-l", "8080"]
