--- a/web_server/package.json
+++ b/web_server/package.json
@@ -18,6 +18,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.1"
