--- a/android_app/app/src/main/AndroidManifest.xml
+++ b/android_app/app/src/main/AndroidManifest.xml
@@ -17,13 +17,17 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".ui.auth.RegistrationActivity"
+            android:name=".ui.auth.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name=".ui.auth.RegistrationActivity"
+            android:exported="false" />
 
     </application>
 
