--- a/web_server/package.json
+++ b/web_server/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.4",
     "multer": "^2.0.1"
   }
 }
